# test-ci

./: CHANGELOG.md  Cargo.toml  release-notes.md
.github/actions/rust_release/: action.yaml
.github/actions/versionning/: action.yaml
.github/workflows/: create-pre-release.yml  create-release-branch.yml  replace-pre-release-with-release.yml  rust-ci.yaml  rust-cicd.yaml  rust-pre-release.yaml  rust-pre-release.yml  rust-prepare-release.yaml  rust-release.yaml  test  update-pre-release.yml
old/.github/workflows/: rust-pre-release.yml
old/workflows/: rust-ci.yaml  rust-pre-release.yaml  rust-release.yaml
src/: main.rs
